# skilloom

./: AGENTS.md  Cargo.toml  LICENSE  README.md  TODO.md
.github/workflows/: ci.yml
docs/: README.md
docs/adrs/: 0001-documentation-first.md  0002-rust-and-ratatui-for-the-tui.md  0003-skilloom-engine-design-and-scope.md  _template.md
docs/features/: _template.md  overview.md  tui-dashboard.md
docs/guides/: _template.md  loom-skills-repo-layout.md  ratatui-tui-stack.md
docs/workflows/: _template.md  remove-a-global-skill.md  sync-a-skill-to-global.md
src/: app.rs  complete.rs  config.rs  ledger.rs  main.rs  paths.rs  scroll.rs  skills.rs  sync.rs  ui.rs
