[package]
name = "skilloom"
version = "0.0.0"
edition = "2024"
description = "A TUI-first manager for AI agent skills — personal skills versioned in a git repo, third-party skills tracked from upstream, reconciled across agents and projects."
repository = "https://github.com/mikevalstar/skilloom"
readme = "README.md"
license = "MIT"
publish = false

[[bin]]
name = "skilloom"
path = "src/main.rs"

# Core stack per docs/adrs/0002-rust-and-ratatui-for-the-tui.md. tokio/clap
# join later, when network/git and the CLI (`--json`) surface arrive.
[dependencies]
anyhow = "1.0.103"
ratatui = "0.30.2"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"

[dev-dependencies]
tempfile = "3.27.0"
